--- a/style/index.css
+++ b/style/index.css
@@ -102,6 +102,8 @@ div#notification {
   overflow-x: hidden;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: none;
+  overflow: -moz-scrollbars-none;
 }
 
 p#notification-loading,
