fixed: 二维码 UI 错误的问题

--- a/style/index.css
+++ b/style/index.css
@@ -34,9 +34,13 @@ body {
 
 div#app {
   display: block;
-  width: 350px;
+  width: auto;
   font-size: 0;
   overflow: hidden;
+}
+
+div#app.full {
+  width: 350px;
 }
 
 /* 登录 */
