--- a/style/index.css
+++ b/style/index.css
@@ -414,7 +414,6 @@ div.n-like-no-link {
 /* 图片查看器 */
 
 div#image {
-  cursor: pointer;
   display: block;
   position: fixed;
   top: 0;
@@ -422,7 +421,7 @@ div#image {
   bottom: 0;
   left: 0;
   font-size: 0;
-  background: #fff;
+  background: #000;
   overflow: hidden;
   z-index: 999;
 }
@@ -433,30 +432,45 @@ div#image > div {
   overflow: hidden;
 }
 
+div#image-func {
+  display: block;
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  text-align: right;
+  overflow: hidden;
+  z-index: 1000;
+}
+
+div#image-func > i {
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+  height: 40px;
+  width: 40px;
+  background: #f0f3f5 center no-repeat;
+  border: 0;
+  border-radius: 50%;
+}
+
+div#image-func > i + i {
+  margin-left: 5px;
+}
+
+div#image-func > i:first-child {
+  background-image: url('../images/history-ico.svg');
+  background-size: 22px;
+}
+
+div#image-func > i:nth-child(2) {
+  background-image: url('../images/close-ico.svg');
+  background-size: 16px;
+}
+
 div#image img {
   object-fit: contain;
   height: 100%;
   width: 100%;
-}
-
-div#image span {
-  display: block;
-  position: absolute;
-  bottom: 20px;
-  left: calc(50% - 50px);
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 32px;
-  text-align: center;
-  width: 100px;
-  border-radius: 18px;
-  background: linear-gradient(105deg, #fad961, #ffe411);
-  user-select: none;
-  opacity: .5;
-  transition: opacity .25s linear;
-  z-index: 1000;
-}
-
-div#image span:hover {
-  opacity: 1;
 }
