fixed: 修复用户没有收到过任何通知时的报错问题

--- a/style/index.css
+++ b/style/index.css
@@ -96,6 +96,11 @@ div#notification {
   -webkit-overflow-scrolling: touch;
 }
 
+div#notification.empty {
+  background: url('../images/empty-ico.svg') center no-repeat;
+  background-size: 100px;
+}
+
 p#notification-loading,
 p#notification-error {
   cursor: pointer;
